--- a/app/globals.css
+++ b/app/globals.css
@@ -58,8 +58,14 @@ body {
 .small-planet {
   opacity: 0;
 }
-
-
+.planet-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
 
 @layer utilities {
   .text-balance {
