--- a/app/globals.css
+++ b/app/globals.css
@@ -66,7 +66,9 @@ body {
   opacity: 0;
   transition: opacity 0.5s ease;
 }
-
+.letter {
+  display: inline-block;
+}
 @layer utilities {
   .text-balance {
     text-wrap: balance;
